--- a/src/content/website-building.mdx
+++ b/src/content/website-building.mdx
@@ -1,6 +1,7 @@
 ---
 title: First Post Website Building
 date: 2023-04-11
+description: A commitment to actually maintaining this site
 ---
 
 It's dangerously simple to let a new personal website die a lonely death. Case in point—my last website.
