cleaned up draft

--- a/content/blog/Solana-journey.mdx
+++ b/content/blog/Solana-journey.mdx
@@ -8,117 +8,116 @@ Today marks 2 years of me working at @solana labs. Its a surreal first job to ha
 
 ## Chapter 1: The Foundation (2016 - 2020)
 
-I've been in crypto since 2016, convincing my dad to give me $$ to buy btc at 2400, making my first 6 figs on xrb, losing my first 6 figs on xrb, building my first binance trading bot, having my binance trading account drained because of stupidly exposing my api key, sooo many ups and downs.
+I've been in crypto since 2016, convincing my dad to give me $$ to buy BTC at $2400, making my first 6 figures on XRB, losing my first 6 figures on XRB, building my first Binance trading bot, having my Binance trading account drained because of stupidly exposing my API key - sooo many ups and downs.
 
-But i didn't seriously start programing until jan 2020, second sem of freshman year (also covid).
+I didn't seriously start programming until January 2020, second semester of freshman year (also COVID).
 
-I was originally going down the study finance -> work as IB for 2 years -> switch to hedge funds, but wow the hardest part of finance was not falling asleep in the braindead intro classes.
+I was originally going down the study finance -> work as IB for 2 years -> switch to hedge funds path. But wow the hardest part of finance was not falling asleep in those braindead intro classes.
 
-I ended up switching over to study math/cs/stats, being more interested in quant trading, but even that never seemed fun. In the meantime, a couple of the grad courses I was taking required me to work on a final project (algorihtms, massive data storage, machine learning). I was also getting deep into podcasts, and wanted to come up with a way to automatically generate timestamps. I taught myself pythohn, built a mlmodel to figuring out all the subtoics in a podcast, and ofc generate the timestamps. I also taught myself how to deploy this on the web, host the database, all that.
+I switched to study math/CS/stats, becoming more interested in quant trading, but even that never seemed fun. Meanwhile, a couple of grad courses I was taking required final projects (algorithms, massive data storage, machine learning). I was also getting deep into podcasts and wanted to automatically generate timestamps. I taught myself Python, built an ML model to identify subtopics in podcasts and generate timestamps. I also learned to deploy this on the web and host the database.
 
-The next couple months, crypot was ramping up, and i was getting onto twitter a lot more, and i built this twitter scraping bot to identify which accounts were reputabel.
+The next couple months, crypto was ramping up, I was getting onto Twitter more, and I built a Twitter scraping bot to identify reputable accounts.
 
 ## Chapter 2: Breakpoint 2021 & events – The Door Opens
 
-This continued until oct 2021, whcih @r_shea posted this tweet about, writing about yourself and your interest in crypto, and we'd get to become a breakpoint fellow (all expenses paid trip to lisbon for the first solana breakpoint). It seemed too good to be true, but i felt i had the perfect background in my projects, studies, and history in crypto. I wrote an essay, had no expectations, and then saw the "congrats Harsha!" email roll in.
+This continued until October 2021, when @r_shea posted a tweet about writing about yourself and your interest in crypto to become a Breakpoint fellow (all expenses paid trip to Lisbon for the first Solana Breakpoint). It seemed too good to be true, but I felt I had the perfect background in projects, studies, and crypto history. I wrote an essay with no expectations, then nonchalantly saw the "Congrats Harsha!" email.
 
-It didn't seem legit until the moment i got onto the airplane. How is it possible from one tweet to get all this? I met many poeple even in the airport going to breakpoint, intimiating then meeting all the vcs with all this money, where as i was a kid in sophomore year.
+It didn't seem legit until the moment I got onto the airplane. How is it possible from one tweet to get all this? I met many poeple even in the airport going to breakpoint, intimiating then meeting all the vcs with all this money, where as I was a kid in sophomore year.
 
-at breakpoint, the rest of the fellows and i were placedin a hostel, where i met @chrisliambender, @zayyanfaizal, @quinnbarry couple other guys who all had their own projects going on. met @andy the imposter syndrome didn't stop all week, as i met all these cool "accomplsihed people". i was hoping to meet people part of the team to try and get an internship. in fact did, but out of my laziness to cleanup my resume and practice leetcode (idk why i thought leetcode mattered), i never followed up on that.
+At Breakpoint, the rest of the fellows and I were placedin a hostel, where I met @chrisliambender, @zayyanfaizal, @quinnbarry couple other guys who all had their own projects going on. met @andy the imposter syndrome didn't stop all week, as I met all these cool "accomplsihed people". I was hoping to meet people part of the team to try and get an internship. in fact did, but out of my laziness to cleanup my resume and practice leetcode (idk why I thought leetcode mattered), I never followed up on that.
 
 ### Chapter 2.5 On hands on experience
 
-But yet, its as if god wanted to force solana down my throat, since i was invited to chicago a couple months later in jan 2022 to participate in a solana bootcamp with @jarxiao. met a couple other good friends here @ishaan, @alec. Jarry hilariously enough saw me dual windowing vim +tmux, and emacs, and thoguht it was high signal enough, combined with my other research into topogolical data analysis to warrant an internship with him over the summer.
+But yet, its as if god wanted to force solana down my throat, since I was invited to chicago a couple months later in jan 2022 to participate in a solana bootcamp with @jarxiao. met a couple other good friends here @ishaan, @alec. Jarry hilariously enough saw me dual windowing vim +tmux, and emacs, and thoguht it was high signal enough, combined with my other research into topogolical data analysis to warrant an internship with him over the summer.
 
-soon after this chicago bootcamp, covid ended i was returning to school. thankfully by this point, i crammed alll my classes in during covid, and i could've graduated with my triple major. buti realized how fun college was and the buffer period it gave me, and i stayed at school
+After the Chicago bootcamp, COVID ended and I returned to school. Thankfully, by this point, I had crammed all my classes during COVID and could've graduated with my triple major. But I realized how fun college was and how valuable a buffer period it gave me was, and I stayed.
 
-in the meantime, i was working with @ryan and @keegan_mcnamara on their initial forraw into Nations. This was my first steps into typescript and nextjs. i was sooo green tbh i was let go after a month. but it was a great expereince, sicne I needed next in almost all my other future projects
+Meanwhile, I worked with @ryan and @keegan_mcnamara on their initial foray into Nations. This was my first experience with TypeScript and Next.js. I was so inexperienced that I was let go after a month, but it was valuable since I needed Next.js for almost all my future projects.
 
-At this point, the interviewer for the promised internship finally reached out. and when he heard i was already working with solana adjacent projects, the interview was all but a formality.
+At this point, the interviewer for the promised internship finally reached out. And when he heard I was already working on Solana adjacent projects, the interview was all but a formality.
 
-the semester was spent in fun classes, but although the internship was secured, it again didn't seem real until the moment i got onto the flgiht from ewr to chicago. I mean, how many kids get to have a story like that? they got hired for an internship with no interview, purely because they did and explored things for fun?
+the semester was spent in fun classes, but although the internship was secured, it again didn't seem real until the moment I got onto the flight Chicago. I mean, how many kids get to have a story like that? They got hired for an internship with no interview, purely because they did and explored things for fun?
+
+Met other friends here: @ishaan, @alec.
 
 ## Chapter 3: The Internship (Summer 2022)
 
 That summer was a turning point. If we're being honest, solana definetly did not have a concrete internship plan. The intern class was small @sam_orend, @emil, @greg_cusack, and none of knew what was happening. When we walked in, @bartosz and @jordan sat us down and explained various projects they were working on, and told us to pick one. I distinctly remember @sam and I looking at each other mentally communicating "wtf". @jarry and @larry took pity on us, and helped us figure out what exact projects would be suited for us.
 
-Only now i realize how prescient Jarry was, since he first gave me an infra project to see if i could overwhelm devnet, and when i was confused, he convinced me to try building an nftamm, the first of my many product engineering projects. And I was built for that. I remember nights where I slept in the office, ordered in food, since I was sooooo focused on my work. And all worth it, for that sweet sweet return offer. The highlight of this was showing my progress to @anatoly directly.
+Only now I realize how prescient Jarry was, since he first gave me an infra project to see if I could overwhelm devnet, and when I was confused, he convinced me to try building an nftamm, the first of my many product engineering projects. And I was built for that. I remember nights where I slept in the office, ordered in food, since I was sooooo focused on my work. And all worth it, for that sweet sweet return offer. The highlight of this was showing my progress to @anatoly directly.
 
-The summer was a blast, clibming, using our $150 dollar a day per diems on michelin star restaurants & nobu (solana later told us this was not supposed to be what weused the per diems for, and likely why they only ever had one more intern class after us). Thanks again @emil for not letting us be boring ;). And met @dustin here for the first time.
+The summer was a blast, clibming, using our $150 dollar a day per diems on michelin star restaurants & Nobu (Solana later told us this was not supposed to be what weused the per diems for, and likely why they only ever had one more intern class after us). Thanks again @emil for not letting us be boring ;). And met @dustin here for the first time.
 
-Another important detail of the summer was, I @santosh and @alenchen during the chicago internship while they were working at @hyperspace. I hit it off with them, and they told me before i start full time at solana, to come work with them for a couple months.
+Another important detail of the summer was, I @santosh and @alenchen during the chicago internship while they were working at @hyperspace. I hit it off with them, and they told me before I start full time at solana, to come work with them for a couple months.
 
 ## Chapter 4: Hyperspace and Senior Year (Fall 2022)
 
-So, i was going into senior year, solana return offer in place, interning at hyperspace, and all fun online courses, since i finsihed my triple major and all its classes, i was on god taking history of dracula, graphic design, music theory, and bhakti yoga. All while drinking beers w friends till 3am.
+So, I was going into senior year with a Solana return offer, interning at Hyperspace, and taking fun courses since I'd finished my triple major requirements – history of Dracula, graphic design, music theory, and Bhakti yoga. All while drinking beers with friends until 3am.
 
-My internship at hyperspace was convidntly related to my internship, since they were then focused ontrying to aggregate all the nftamms on solana. Since i built one of the first implementations of it, i helped atleast somewhat in parsing their logic. But more than the work, it was my first foray into adulting, and extremely greatful for that semi inperson experience.
+My Hyperspace internship conveniently related to my previous work, since they were focused on aggregating all the NFTAMMs on Solana. Having built one of the first implementations, I helped somewhat in parsing their logic. More than the work, it was my first foray into adulting, and I'm extremely grateful for that semi-in-person experience. Commuting into NYC, felt what it was like to be an almost adult, zoomming across campus on my electric scooter while zombies were lugging their backpacks and starbucks onto the campus busses.
 
-I also ended up going to breakpoint again this year during the fall, since i was starting at solana anyway. Met @raj for the first time in person here, and remember @nicole threw me a sick 21st party on a yacht in lisbon, ty again :)
+I also ended up going to breakpoint again this year during the fall, since I was starting at solana anyway. Met @raj for the first time in person here, and remember @nicole threw me a sick 21st party on a yacht in lisbon, ty again :)
 
-And as soon as it started, the semester ended as fast. Sooo many memories were made, demon time started as i was getting out of my first breakup, grew apart from friends, made new ones.
+And as soon as it started, the semester ended as fast. Sooo many memories were made, demon time started as I was getting out of my first breakup, grew apart from friends, made new ones.
 
-During winter break, i rented an airbnb in the middle of upstate new york woods for a week, and didn't touch my phone once (other than emergencies). I crammed myself with my favorite books @Robert greene's mastery specifically, had "turn over control" playing on repeat. I built myself a campfire, watched the stars, cooked myself hot spicy bean chili, and generally contemplated life.
+During winter break, I rented an airbnb in the middle of upstate new york woods for a week, and didn't touch my phone once (other than emergencies). I crammed myself with my favorite books, particularly @Robert greene's mastery, had "Take over Control" playing on repeat. I built campfires, watched the stars, cooked myself hot spicy bean chili, and generally contemplated life.
 
 ## Chapter 5: Full-Time at Solana Labs (January 2023)
 
-Then finally, jan 3rd, 2023. The first couple weeks were the chillest time of my life, got the same laptop i used for my internship back, getting back to school (taking a singular acting class at this point! graduated early but auditing a class to give myself an excuse to continue living on campus), and revising all my old programming skills.
+Finally, January 3rd, 2023. The first weeks were the most relaxed time of my life – got back my internship laptop, returned to school (taking one acting class, having graduated early but auditing to have an excuse to continue living on campus), and refreshing my programming skills.
 
-Towards the end of jan, i was flown out to chicago for a team offsite. The Product Engineering focus of solana was incubated aroudn then, as the company was reprioritizing. This was the lowest of the low for solana, around $12, hurting badly after ftx. There were a bunch of haphazard projects being worked on (many of these would be cut later), but i was first assigned to @alexey skibin, and was helping him build out a perps exchange on solana. This would infact be the precursor to @flashtrade, which @emon helped start the relationship way back then.
+Late January, I flew to Chicago for a team offsite. Solana's Product Engineering focus was incubated then as the company reprioritized. This was Solana's lowest point, around $12, hurting badly after FTX. Several haphazard projects were in progress (many later cut), That first team meeting was again a god given wrold view into ho absolute killers operate. I had a naive outlook towards eveyrone. all this bright eyed smiles, asking people i didn't know somewhat bad questions. Thankfully, this might have been while i was underestimated, and allowd to survive for as long as I did. But seeing the casuliness they walked with, diner ettiqute, speaking out in meetings, great great learning experience
 
-When they told me to work on it, i was expected to figure out everythign myself. I don't think anyone else my age with my background could have survived, except me. My years of working on projects, my timely intro to next js with my past projects set me up extremely well to figure out most of the frontend work for the platform. I distinctly remember alexey saying it'd take me around 3 months, i cockily said nah, 1.5 months ez. It ended up taking 3 months as alexey wisely predicted, and it sounded like i did well. Looking back, it most definetly was not quality production grade work, but the best a 21 year old could do, all by himself.
+I was assigned to @alexey skibin, helping build a perpetuals exchange on Solana. This became the precursor to @flashtrade, with @emon helping start the relationship back then. When assigned to this project, I was expected to figure everything out myself. I don't think anyone elsemy age with my background could have survived, but my years of project work and timely introduction to Next.js prepared me well for the work. I remember Alexey saying it would take about 3 months; I cockily said 1.5 months. It took 3 months as he predicted, but I apparently did well. Looking back, it wasn't production-grade work, but the best a 21-year-old could do alone.
 
 ## Chapter 6: Shopify—My Biggest Test (Summer 2023)
 
-This next project, was my biggest career success to date, but also almost by biggest failure.
+This next project was my biggest career success to date, but almost my biggest failure.
 
-Shopify. Specifically, building solana pay as a shopify extension.
+Shopify. Specifically, building Solana Pay as a Shopify extension.
 
-Coming off the high of my previous project, i felt i knew everything. And i was put under a former solana labs employee which i will not name. Unknown to me, he was extremely eager to get the job done as fast as possible, under an arbriraty deadline of july 3rd. My enthusiastic self went along with it, although he was weirdly protective of the work, gave me only the smallest parts to work on, whatever. Treid my best to be helpful, which i was, and simply understand all the requirements shopify had.
+Coming off my previous success, I felt I knew everything. I was placed under a former Solana Labs employee I won't name. Unknown to me, he was eager to complete the job quickly, under an arbitrary July 3rd deadline. I enthusiastically complied, though he was oddly protective of the work, giving me only small parts while I tried to understand Shopify's requirements.
 
-Well july 3rd rolls around, we were supposed to chat at 3pm est since we were somewhat cloes to finsihing but not yet. But i check at 2:30, and his slack is deactivated.
+Well july 3rd rolls around, we were supposed to chat at 3pm est since we were somewhat cloes to finsihing but not yet. But I check at 2:30, and his slack is deactivated.
 
-I was like, WTF! He was completley gone right after the call.
+July 3rd arrived, we were supposed to chat at 3pm EST as we were close to finishing. At 2:30, I discovered his Slack was deactivated. He was completely gone.
 
-My replacement boss told me to wait a couple days while they decide, and then they come back with Essentially, a pip saying, I have one month to complete the entire project. There's very little assistance given to me. I had to figure out everything from the code, talking, figuring out who to even talk to on the Shopify side or Amazon side, get random permissions from upper level engineers at labs, doing all the documentation, taking care of some of the design, yeah, it was all solo.
+My replacement boss told me to wait while they decided what to do. They came back with essentially a PIP: I had one month to complete the entire project with minimal assistance. I had to decipher the code, determine who to contact at Shopify and Amazon, obtain permissions from senior engineers at Labs, write documentation, handle design aspects – all solo.
 
-Well, I took that challenge up entirely. I'm like, great, there's nothing else for me to compete against except myself. And that month, if you look at my GitHub contribution history, every single day, not even a weekend, a day was missed. Just constantly grinding, waking up at 6, working out, working until 11, 12, sleeping, just repeating. I left my house maybe five times total that whole month.
+I embraced the challenge. There was nothing to compete against except myself. That month, my GitHub contribution history shows activity every single day without exception. Constant grinding: up at 6, workout, work until 11-12, sleep, repeat. I left my house perhaps five times the entire month.
 
-Its interesing becuase i'm 90% sure no one expected me to be able to finish it. because the boss i submitted to was like uhhhh. random people in the bd side started popping up and trying to take credit
+I'm 90% sure no one expected me to finish. When I submitted the work, my boss seemed surprised. Random people from BD started appearing and trying to take credit. Operations people drafted comments and releases without acknowledging me.
 
-all these ops people trying to draft comments and releases, with no one infact crediting me tbf.
+_If it was me now, I wouldve milked the shit out of that on Twitter_. But at the time, I let it slide, licking my wounds from barely surviving. I earned my stripes and learned about the brutal realities of the corporate world. It looks like they care, but in reality, nah. But thats what makes a good company, it trained me to become an absolute executor.
 
-_If it was me now, i wouldve milked the shit out of that on twitter_. But in the moment, i let it slide, licking my wounds of barely surviving. I earned my stripes for sure, and learned about the brutal realities of the corporate world. It looks like they care, but in reality, nah. But thats what makes a good company, it worked for me to trian me into an absolute executor.
+## Chapter 7: Gameshift Part I (Fall 2023 - 2024)
 
-Chapter 7: Gameshift Part I (Fall 2023 - 2024)
+After a few weeks off, I transitioned to the Gameshift team. Gameshift was a completely new product, and a masterclass in building a startup, without the traditional risks of pay or work-life balance concerns.
 
-I then had a couple weeks off, as they transitioned me to the gameshfit team. This team infact Gameshift was a completely new product, and a masterclass for e into building a startup. All the better since i had none of the traditiona risks of pay or work life balance.
+Having been at the company before this team formed, I witnessed firsthand how external culture gives continues into all future teams. It requires significant effort from team leaders to energize and redirect existing talent toward a new mission.
 
-Since i'd been at the company a while before this team formed, i had a first hand glimpse of how the external culture gives birth to the new. Takes a lot of effort by team leaders to affect new energy and break the belives of all the old talent into beliving the new mition.
+I was definitely treated as the junior member. Everyone, except 1, was 30+. I struggled to communicate my ideas effectively, as they would rightfully scrutinize them more thoroughly than I could defend. This taught me to think through problems better. Each team member specialized in a different area – one versatile programmer, one designer, a solid PM. Everyone was dependable. It's rare for me to be the weak link, but here I was rightfully challenged.
 
-I definetly did get treated like the junior. Everyone except 1 was 30+. I had a hard time communicating my ideas in this arena, since they rightfully would pick apart my ideas but better than i could defend. This has bgiven me experience in thinking through problems better. Everyone on the team was alsoa s epcfialist in one orthogonal field. One guy cracked all rounder programmer, one good designer, PM was solid. Everyone was generally dependable on for good work. Its rare for me to have been the weak link ever in my life, yet erhe, i was being rigthfully challenged.
+The best part of working at Labs was the hyper-rationality from everyone. People were generally excellent judges of capability. Those who couldn't perform were noticed. Everyone maintained hyper-focus on the mission of eliminating centralized planning and reducing their project load.
 
-The best part of working at a place like labs was the hyper rationality from everyone. Everyone was generally a great judge of capability. The poepl who couldn' put out were definetly noticed. Hyper focused on their mission of generally eliminating centralized planning, and reducing the projects they faced.
+## Chapter 8: Gameshift Part 2 (Summer 2024 - Feb 2025)
 
-Chapter 8: Gameshift Part 2 (Summer 2024 - Feb 2025)
+As time passed, our Gameshift thesis didn't pan out, though no one discussed this openly. I felt extremely guilty for receiving a full-time salary while producing perhaps 1/10th of my capability. At one point, I even traveled to Antarctica with zero PTO days used.
 
-As time, our these on Gameshift didn't pan out as accordingly, and it was the ghost in the room no one talked about. I for one, felt extremely guilty for the fact i was being paid a morethan fuill time salary, but i wasn't outputting nearly 1/10th of what i was capable of. At one point, i even travelled to Antarctica, with 0 days of pto.
+This is what a young team member can get away with. In leadership positions, you earn more but bear greater responsibility for people's livelihoods.
 
-This is what a young team member can likely get away with. If you're in more leadership positions, sure you get paid more, but you're held a lot more responsible, you're in charge of peoples lives.
+Even our team lead, typically jovial with me, looked genuinely red-faced and sad during our final call when he had to deliver the news directly.
 
-Even our team lead. He was always so jovial and what not to me. But the last call where he had to break it to me straight, he face genuinely looked red in the face, sad that he had to do it that way.
+The HR representative was professionally trained, ruthless yet caring. I never quite knew how to read her; at face value, she always seemed on my side, and I truly hope she was.
 
-The hr lady, extremley well trained to be professional, but still ruthless, but still caring. I still never knew how go read her, from face value, she always seems like shes on your side. And i truly hope she was.
+I felt sad about leaving. This job put me on the map. The wealth, mindset, experiences, opportunities, and exposure – this job was my greatest blessing after my parents, brother, and close friends.
 
-I of course felt sad i was leaving. This job is what put me on the map. The amount of welath, mindset setting, experiences, opporitunies, expsoures, this job was the biggest blessing of my life, after my parents and brother and close friends ofc.
+Being fired definitely shook me, but I know it was the right outcome. For months I'd been languishing, afraid to do what I should. Now, the shackles are unlocked and the weight lifted from my shoulders.
 
-and being fired, defffinetly shook. but i know it was the right outcome. for months i've been languishing away, afraid of doing what i should be doing. and now, the shackles have been unlocked, ad th weights been lifted off my shoulders.
+It helped that the Wednesday I first suspected I might be fired, I immediately reached out to friends and had a job offer signed within an hour after the termination call.
 
-of course, it hleped the fact that the fierstr wednesday i got the suspciion it as going to be a firing, i immeidately started reaching out to friends, and even had a job offer signed 1 hour after the letting go call.
-
-the aount of confidence i got in that moment, the wave of trust in my skills, all thos eyears of toiling to be resepcted by my reputation alone. WORTH IT
+The confidence I gained in that moment, the wave of trust in my skills, all those years building a respected reputation – WORTH IT.
 
 ## Conclusion: Moving Forward
 
-Well, coincidently, i had a bunchhh of travel planned for March 2nd, and here I am finishing up this piece which i have been meaning to put together for a while.
-Transitioning away from the last time i'll ever be an employee again, into my new life. first i'm retiring for a year, of course :)
+Coincidentally, I had extensive travel planned for March 2nd, and here I am finishing this reflection I've meant to write for a while. Transitioning from my last time as an employee into my new life. First, I'm retiring for a year, of course :)
