--- a/content/blog/gita-journey.mdx
+++ b/content/blog/gita-journey.mdx
@@ -26,7 +26,7 @@ Career-wise, I left a job most people would never walk away from. I turned down 
 
 Romantically, I’ve had moments of real intensity, but I haven’t always shown up the way I wanted to. I’m learning how to express myself without ego or fear—to say what I feel without trying to control the response. Just speak clearly, and let that be enough.
 
-Personally, I’m the most mature and self-aware I’ve ever been. But I’m also realizing how far I still have to go. I’m learning what it means to be emotionally steady—not acting from pride or fear. What it means to be a man—not in the cliché sense, but in a quiet, high-class kind of way. Gentle, but firm in what I want. Clear in my values.
+Personally, I've made tremendous progress in my self-awareness and maturity. But I’m also realizing how far I still have to go. I’m learning what it means to be emotionally steady—not acting from pride or fear. What it means to be a man—not in the cliché sense, but in a quiet, high-class kind of way. Gentle, but firm in what I want. Clear in my values.
 
 And by values, I don’t mean abstract ideas—I mean the moments I’m willing to shift for someone I care about. To really listen when something they say reveals something true in me. That’s the kind of man I want to become.
 
