--- a/content/about.mdx
+++ b/content/about.mdx
@@ -3,12 +3,10 @@ title: 'About Me'
 date: 2024-03-20
 ---
 
-I build 0 to 1 startup products as a software engineer at Solana Labs.
+I build 0 to 1 startup products, exploring fields in business operations and music education.
+
+I was previously a software engineer at Solana Labs. I built a payments product that processed over $80M in volume through integrations with platforms like Shopify, and developed production-grade backend infrastructure for on-chain game studios.
 
 I triple majored in Math, Computer Science, and Statistics at Rutgers in 2.5 years. I lived on campus the last 1.5 years, exploring philosophy, history, and various arts, graduating officially in 2023.
 
-I spent a year living at home after graduation, locking in at work & spending time with family.
-
-I moved to Fort Lauderdale in 2024, and between new friendships, constant travel, autonomy, learned a lot about what i do and don't value.
-
-Lets see what 2025 has in store :)
+After graduating, I spent a year at home working and spending time with family, then moved to Fort Lauderdale in 2024—where a mix of travel, autonomy, and new friendships pushed me to rethink what I actually value.
