updated to gita

--- a/content/blog/gita-journey.mdx
+++ b/content/blog/gita-journey.mdx
@@ -8,13 +8,13 @@ summary: Takeaways from the Gita for the next stage of my life
 
 ### Intro
 
-I’ve reached a point in career, relationships, and health where I’ve had just enough success to see what the next 5–10 years could look like. It’s a good life—stable, impressive even—but I already know it won’t satisfy me for long.
+I’ve reached a point in career, relationships, and health where I’ve had just enough success to see what the next 5–10 years could look like. It’s a good life. Stable, impressive, all that stuff. But I already know it won’t satisfy me for long.
 
-What I’m trying to figure out now isn’t what to chase next, but how to live better. With more emotional control. More clarity. More generosity toward others. That’s what led me to the Gita—not for quick answers, but to help me think more clearly about what actually matters.
+What I’m trying to figure out now isn’t what to chase next, but how to live better. With more emotional control. More clarity. More generosity toward others. This search for deep thought about my future brought me to the Gita.
 
 I was already heading to Europe with one of my closest friends. I carved out a few quiet days on my own, booked a place in a remote fjord village, and shut everything off. I wanted to sit with my thoughts, without distractions.
 
-This is what I took away from that time—and how I plan to carry it forward.
+This is what I took away from that time, and how I plan to carry it forward.
 
 ---
 
@@ -24,22 +24,22 @@ There are certain periods in life where you just know everything’s about to ch
 
 Career-wise, I left a job most people would never walk away from. I turned down offers that seemed perfect on paper. But I don’t want to get locked into a direction just because it looks good. I want to learn specific things, build in a way that feels honest, and push toward something that feels mine.
 
-Romantically, I’ve had moments of real intensity, but I haven’t always shown up the way I wanted to. I’m learning how to express myself without ego or fear—to say what I feel without trying to control the response. Just speak clearly, and let that be enough.
+Romantically, I’ve had moments of real intensity, but I haven’t always shown up the way I wanted to. I’m learning how to express myself without ego or fear. To say what I feel without trying to control the response. Just speak clearly, and let that be enough.
 
-Personally, I've made tremendous progress in my self-awareness and maturity. But I’m also realizing how far I still have to go. I’m learning what it means to be emotionally steady—not acting from pride or fear. What it means to be a man—not in the cliché sense, but in a quiet, high-class kind of way. Gentle, but firm in what I want. Clear in my values.
+Personally, I've made tremendous progress in my self-awareness and maturity. But I’m also realizing how far I still have to go. I’m learning what it means to be emotionally steady, and not acting from pride or fear. What it means to be a man. Not in the cliché sense, but in a quiet, high-class kind of way. Gentle, but firm in what I want. Clear in my values.
 
-And by values, I don’t mean abstract ideas—I mean the moments I’m willing to shift for someone I care about. To really listen when something they say reveals something true in me. That’s the kind of man I want to become.
+And by values, I mean the moments I’m willing to shift for someone I care about. To really listen when something they say reveals something true in me. That’s the kind of man I want to become.
 
 ⸻
 
 ## A Gita Focused Retreat
 
-The last time I felt this pulled in different directions, right after graduating college and starting work, I took a short solo trip to the woods and read Mastery by Robert Greene. That reset me. It reminded me to chase real skill—not status. To become undeniable at something.
+The last time I felt this pulled in different directions, right after graduating college and starting work, I took a short solo trip to the woods and read Mastery by Robert Greene. That reset me. It reminded me to chase real skill, not status. To become undeniable at something.
 
 And I did. I got good at turning ideas into software.
-(Still more to sharpen—design, scale—but I trust I’ll learn what I need to.)
+(Still more to learn, but I trust I’ll learn what I need to.)
 
-This time, the goal wasn’t clarity—it was elevation. I already have options. I’ve seen how things could unfold. But I wanted to ask: am I aiming at what’s actually meaningful? Or just what’s easiest to reach?
+This time, the goal wasn’t clarity. It was elevation. I already have options. I’ve seen how things could unfold. But I wanted to ask: am I aiming at what’s actually meaningful? Or just what’s easiest to reach?
 
 So I booked a quiet Airbnb in Undredal, Norway. No phone. Two days of reading, walking, and thinking.
 
@@ -60,7 +60,7 @@ Let go of the result. Do your work. Release your grip.
 
 When you believe you’re the source of the action, you crave credit. You fear failure. You spiral into pride or shame. That’s how karma traps you.
 
-And then there’s the Gunas—rajas (restlessness), tamas (inertia), and sattva (clarity). The Gita teaches that these are always shifting in us. They cloud how we see the world. Even awareness doesn’t make you immune.
+And then there’s the Gunas: rajas (restlessness), tamas (inertia), and sattva (clarity). The Gita teaches that these are always shifting in us. They cloud how we see the world. Even awareness doesn’t make you immune.
 
 I’ve been trying to notice them in real-time:
 • Rajas when I chase a high or feel pressure to produce. Trying to live up to what people might think of me.
@@ -75,19 +75,19 @@ But the Gita doesn’t just teach you to spot them. It asks you to go beyond the
 
 Even after all this reflection, I still get caught.
 
-At the watch event, my friend—who had been excited about it for years—joked, “Document me.” I was distracted, tired, and in my own head. Talking shit about brands, thinking about myself. I missed the moment. I wasn’t present for him. That’s not who I want to be. That was rajas.
+At the watch event, my friend, who had been excited about it for years, joked, “Document me.” I was distracted, tired, and in my own head. Talking shit about brands, thinking about myself. I missed the moment. I wasn’t present for him. That’s not who I want to be. That was rajas.
 
-A few days later, I spiraled—unexpected taxes, a market dip. I froze. Couldn’t think straight for ten minutes. Heavy, foggy, frozen. Eventually I picked up the Gita again and got back to center. That was tamas, but I made progress.
+A few days later, I spiraled. Unexpected taxes, a market dip. I froze. Couldn’t think straight for ten minutes. Heavy, foggy, frozen. Eventually I picked up the Gita again and got back to center. That was tamas, but I made progress.
 
 Same thing in my last relationship. I shut down emotionally instead of expressing what I felt. And it cost me something real. Again tamas, and I will make progress if/when we meet again.
 
 I’m still working through how to be soft without becoming indecisive. How to be measured without muting myself. That balance is hard, but I know it’s worth figuring out.
 
-Desire and anger—the Gita says they trap you in the cycle of karma. You act, and then you cling. You want more. Or you resist what is. Either way, you’re reacting. Not choosing.
+Desire and anger. The Gita says they trap you in the cycle of karma. You act, and then you cling. You want more. Or you resist what is. Either way, you’re reacting. Not choosing.
 
-But when I act from presence—when I’m building, learning, talking to someone with zero performance—I feel alive. That’s the place I want to return to. Over and over.
+But when I act from presence. When I’m building, learning, talking to someone with zero performance, I feel alive. That’s the place I want to return to. Over and over.
 
-The goal is to watch the watcher. Stay aware of what’s moving through you—without mistaking it for you.
+The goal is to watch the watcher. Stay aware of what’s moving through you, without mistaking it for you.
 
 ---
 
@@ -95,11 +95,11 @@ The goal is to watch the watcher. Stay aware of what’s moving through you—wi
 
 When you reread this, Harsha, stay honest.
 
-Notice how emotions color your perception. Identify what mood you’re in before you act—and how that mood is shaping your decisions.
+Notice how emotions color your perception. Identify what mood you’re in before you act, and how that mood is shaping your decisions.
 
 Don’t avoid discomfort just because it’s unfamiliar. Don’t chase things just because they’re available. Pay attention to your energy. Pay attention to your intent.
 
-You light up when you’re with people—when you’re asking questions, reacting in the moment, fully present. That’s not a side of you. That is you.
+You light up when you’re with people. When you’re asking questions, reacting in the moment, fully present. That’s not a side of you. That is you.
 
 Same with building. You’re good at it. You know you are. But you’ve only scratched the surface. This is the time to take it seriously.
 
